[package]
name = "rayna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
raylib = "3.7"
rayon = "1.8"
image = "0.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
